<resources>
    <string name="app_name">ListviewExample</string>

    <string name="listview_1_bttn">Ejemplo 1 - Listview Simple - 1 Línea</string>
    <string name="listview_2_bttn">Ejemplo 2 - Listview Simple - 2 Líneas</string>
    <string name="listview_3_bttn">Ejemplo 3 - Listview Complejo - Custom Adapter</string>
    <string name="listview_4_bttn">Ejemplo 4 - Listview Complejo - Custom Adapter con Tipos</string>
    <string name="recyclerview_1_bttn">Ejemplo 5 - Recycler View - Simple</string>
    <string name="recyclerview_2_bttn">Ejemplo 6 - Recycler View - Con Tipos</string>
    <string name="recyclerview_3_bttn">Ejemplo 7 - Recycler View - Con Click</string>
    <string name="recyclerview_4_bttn">Ejemplo 8 - Recycler View - Con Click y Background</string>
    <string name="recyclerview_5_bttn">Ejemplo 9 - Recycler View - Grid Layout</string>
    <string name="sharedpreferences_bttn">Ejemplo 10 - SharedPreferences</string>
    <string name="database_bttn">Ejemplo 11 - SQLite</string>
    <string name="asynctask_bttn">Ejemplo 12 - Asynctask</string>
    <string name="service_bttn">Ejemplo 13 - Service</string>
    <string name="notifications_bttn">Ejemplo 14 - Notificaciones</string>
    <string name="broadcast_bttn">Ejemplo 15 - Broadcast Battery</string>

    <string name="texto_servicio">Servicio iniciado en background</string>

    <string name="notificacion_1_bttn">Lanzar Notificacion Simple</string>
    <string name="notificacion_2_bttn">Lanzar Notificacion Con Más Datos</string>
    <string name="notificacion_3_bttn">Lanzar Notificacion Expandible y Acciones</string>

</resources>
