<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lukmanu.examples.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bttn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_1_bttn"
            />

        <Button
            android:id="@+id/bttn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_2_bttn"
            />

        <Button
            android:id="@+id/bttn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_3_bttn"
            />

        <Button
            android:id="@+id/bttn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_4_bttn"
            />

        <Button
            android:id="@+id/bttn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_1_bttn"
            />

        <Button
            android:id="@+id/bttn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_2_bttn"
            />

        <Button
            android:id="@+id/bttn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_3_bttn"
            />

        <Button
            android:id="@+id/bttn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_4_bttn"
            />

        <Button
            android:id="@+id/bttn_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_5_bttn"
            />

    </LinearLayout>
</ScrollView>
